--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,12 @@
 html,
 body {
   margin: 0;
-  padding: 0;
-	background-color: #3399BB;
+  height: 100%;
+  background-color: #3399BB;
 }
 
 .webgl {
-	position: absolute;
-	top: 0;
-	left: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
